flex.css, float.css, grid.css, layoutoef.html gemaakt, oef-oefdom03.html veranderd

--- a/javascript/browser/oef/oef-oefDOM03.html
+++ b/javascript/browser/oef/oef-oefDOM03.html
@@ -17,10 +17,10 @@
             frmTekst.txtBEF.value = bedragEUR * BEF;
         }
         function cake() {
-            var naarEuro = document.getElementById("NaarEuro");
-            var naarBEF = document.getElementById("NaarBEF");
-            naarEuro.onclick = naarEuro;
-            naarBEF.onclick = naarBEF;
+            var btnNaarEuro = document.getElementById("NaarEuro");
+            var btnNaarBEF = document.getElementById("NaarBEF");
+            btnNaarEuro.onclick = naarEuro;
+            btnNaarBEF.onclick = naarBEF;
         }
         window.onload = cake;
     </script>
