--- a/html/_eigen/HTML/broodjes/index.html
+++ b/html/_eigen/HTML/broodjes/index.html
@@ -13,12 +13,15 @@
     <div id="wrapper">
         <header>
             <div class="logo">
-                <h1>Brooo-o-odjes!</h1>
+                <img src="logo.png" alt="Broodjes">
+                <h1>
+                    <a href="index.html">Brooo-o-odjes!</a>
+                </h1>
             </div>
             <nav>
                 <ul>
                     <li class="active">
-                        <ahref="index.html">Startpagina</a>
+                        <a href="index.html">Startpagina</a>
                     </li>
                     <li>
                         <a href="bestel.html">Bestel</a>
@@ -36,47 +39,64 @@
                 consectetur irure cupidatat nostrud.</p>
             <section>
                 <h3>Broodje #1</h3>
-                <div class="placeholder"><img src="broodje1.png" alt="Broodje #1"></div> 
-                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum consectetur
-                        sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse id est velit sint
-                        cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p><p class="prijs">2,99 €</p>
+                <div class="placeholder">
+                    <img src="broodje1.png" alt="Broodje #1">
+                </div>
+                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum
+                    consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse
+                    id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
+                <p class="prijs">2,99 €</p>
             </section>
 
             <section>
                 <h3>Broodje #2</h3>
-                <div class="placeholder"><img src="broodje2.png" alt="Broodje #2"></div> 
-                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum consectetur
-                        sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse id est velit sint
-                        cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p><p class="prijs">2,99 €</p>
+                <div class="placeholder">
+                    <img src="broodje2.png" alt="Broodje #2">
+                </div>
+                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum
+                    consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse
+                    id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
+                <p class="prijs">2,99 €</p>
             </section>
 
             <section>
                 <h3>Broodje #3</h3>
-                <div class="placeholder"><img src="broodje.png" alt="Broodje #3"></div> 
-                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum consectetur
-                        sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse id est velit sint
-                        cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p><p class="prijs">2,99 €</p>
+                <div class="placeholder">
+                    <img src="broodje.png" alt="Broodje #3">
+                </div>
+                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum
+                    consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse
+                    id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
+                <p class="prijs">2,99 €</p>
             </section>
 
             <section>
                 <h3>Broodje #4</h3>
-                <div class="placeholder"><img src="broodje3.png" alt="Broodje #4"></div> 
-                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum consectetur
-                        sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse id est velit sint
-                        cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p><p class="prijs">2,99 €</p>
+                <div class="placeholder">
+                    <img src="broodje3.png" alt="Broodje #4">
+                </div>
+                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum
+                    consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse
+                    id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
+                <p class="prijs">2,99 €</p>
             </section>
 
             <section>
                 <h3>Broodje #5</h3>
-                <div class="placeholder"><img src="broodje4.png" alt="Broodje #5"></div> 
-                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum consectetur
-                        sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse id est velit sint
-                        cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p><p class="prijs">2,99 €</p>
+                <div class="placeholder">
+                    <img src="broodje4.png" alt="Broodje #5">
+                </div>
+                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum
+                    consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse
+                    id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
+                <p class="prijs">2,99 €</p>
             </section>
 
             <section>
                 <h3>Broodje #6</h3>
-                <div class="placeholder"><img src="broodje5.png" alt="Broodje #6"></div> 
+                <div class="placeholder">
+                    <img src="broodje5.png" alt="Broodje #6">
+                </div>
                 <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum
                     consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse
                     id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
@@ -95,11 +115,11 @@
         <footer>
             <p>2017 - Gemaakt met
                 <b class="heart">♥</b> in Hoboken, België
-                <span class="footer-nav">
-                    <a href="index.html">Starpagina</a>
-                    <a href="bestel.html">Bestellen</a>
-                </span>
             </p>
+            <div class="footer-nav">
+                <a href="index.html">Starpagina</a>
+                <a href="bestel.html">Bestellen</a>
+            </div>
         </footer>
     </div>
 </body>
