--- a/html/_eigen/HTML/broodjes/index.html
+++ b/html/_eigen/HTML/broodjes/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rozha+One" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="style.css" rel="stylesheet">
 </head>
 
@@ -23,6 +25,7 @@
                     <li class="active">
                         <a href="index.html">Startpagina</a>
                     </li>
+
                     <li>
                         <a href="bestel.html">Bestel</a>
                     </li>
@@ -33,83 +36,110 @@
         <main>
             <h2>Onze broodjes!</h2>
             <p>Tempor qui velit dolor sit. Reprehenderit Lorem pariatur aliquip amet non eiusmod reprehenderit cillum id eu
-                magna sunt labore enim. Consectetur dolor anim culpa in consectetur id aliquip excepteur. Lorem voluptate
-                sint occaecat voluptate eu irure
+                magna sunt labore enim. Consectetur dolor
+                <em>anim culpa in consectetur id aliquip excepteur</em>. Lorem voluptate sint occaecat voluptate eu irure
                 <strong>occaecat proident excepteur</strong> incididunt non nostrud sit consectetur. Aute incididunt veniam Lorem
                 consectetur irure cupidatat nostrud.</p>
             <section>
-                <h3>Broodje #1</h3>
+                <h3>Tonijnsalade Mayo</h3>
                 <div class="placeholder">
                     <img src="broodje1.png" alt="Broodje #1">
                 </div>
                 <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum
                     consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse
                     id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
-                <p class="prijs">2,99 €</p>
+                <a href="bestel.html">
+                    <p class="prijs">3,19 €
+                        <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                    </p>
+                </a>
             </section>
 
             <section>
-                <h3>Broodje #2</h3>
+                <h3>Pikante Tonijnsalade</h3>
                 <div class="placeholder">
                     <img src="broodje2.png" alt="Broodje #2">
                 </div>
-                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum
-                    consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse
-                    id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
-                <p class="prijs">2,99 €</p>
+                <p>Commodo cillum consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit
+                    do do esse id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
+                <a href="bestel.html">
+                    <p class="prijs">2,59 €
+                        <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                    </p>
+                </a>
             </section>
 
             <section>
-                <h3>Broodje #3</h3>
+                <h3>Surimi-Krabsalade</h3>
                 <div class="placeholder">
                     <img src="broodje.png" alt="Broodje #3">
                 </div>
                 <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum
                     consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse
-                    id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
-                <p class="prijs">2,99 €</p>
+                    id est velit sint.</p>
+                <a href="bestel.html">
+                    <p class="prijs">1,99 €
+                        <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                    </p>
+                </a>
             </section>
 
             <section>
-                <h3>Broodje #4</h3>
+                <h3>Grijze Garnaalsalade</h3>
                 <div class="placeholder">
                     <img src="broodje3.png" alt="Broodje #4">
                 </div>
-                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum
-                    consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse
-                    id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
-                <p class="prijs">2,99 €</p>
+                <p>Curabitur sodales magna sit amet metus ultricies aliquet. Duis eget enim quis est viverra commodo non non
+                    arcu. Curabitur cursus ante vel quam fringilla, mattis auctor magna feugiat. Morbi vehicula vestibulum
+                    turpis, vel semper mauris bibendum vel. Suspendisse vulputate nunc at elit auctor interdum. </p>
+                <a href="bestel.html">
+                    <p class="prijs">3,29 €
+                        <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                    </p>
+                </a>
             </section>
 
             <section>
-                <h3>Broodje #5</h3>
+                <h3>Gerookte Zalm</h3>
                 <div class="placeholder">
                     <img src="broodje4.png" alt="Broodje #5">
                 </div>
-                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum
-                    consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse
-                    id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
-                <p class="prijs">2,99 €</p>
+                <p>Donec sed tellus imperdiet, aliquam ex eu, iaculis enim. Quisque pellentesque turpis vel risus congue, a
+                    commodo urna molestie. Sed ultrices orci id arcu placerat condimentum ac sagittis tellus. Proin congue
+                    quis velit vitae mattis. Nulla semper vel tellus a accumsan. </p>
+                <a href="bestel.html">
+                    <p class="prijs">2,99 €
+                        <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                    </p>
+                </a>
             </section>
 
             <section>
-                <h3>Broodje #6</h3>
+                <h3>Club Ardenne</h3>
                 <div class="placeholder">
                     <img src="broodje5.png" alt="Broodje #6">
                 </div>
-                <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum
-                    consectetur sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse
-                    id est velit sint cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
-                <p class="prijs">2,99 €</p>
+                <p>Fusce accumsan diam ac fermentum fermentum. Sed ac lacus ligula. Donec ut gravida leo, convallis bibendum
+                    ante. Quisque nec quam non nibh viverra pulvinar vel vel dolor. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Nunc vulputate aliquet auctor. Donec fermentum, ante id fringilla convallis.</p>
+                <a href="bestel.html">
+                    <p class="prijs">2,69 €
+                        <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                    </p>
+                </a>
             </section>
         </main>
         <aside>
             <h2>Het broodje van de dag!</h2>
             <img src="broodje.png" alt="Een speciaal broodje">
-            <p>Ex cupidatat ut mollit et laborum id exercitation quis laboris amet reprehenderit ut sunt. Commodo cillum consectetur
-                sunt cupidatat irure amet ipsum tempor qui aliquip commodo duis in. Aute velit do do esse id est velit sint
-                cillum velit ex occaecat. Minim pariatur nulla sint ex magna.</p>
-            <div class="bestel">Bestel</div>
+            <p>Integer sit amet ultrices velit, id luctus ex. Pellentesque habitant morbi tristique senectus et netus et malesuada
+                fames ac turpis egestas. Donec dui eros, ornare a placerat tempor, suscipit nec diam. Pellentesque et eleifend
+                metus. In posuere tellus vitae urna semper facilisis. </p>
+            <a href="bestel.html">
+                <div class="bestel">Bestel
+                    <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                </div>
+            </a>
         </aside>
 
         <footer>
@@ -117,8 +147,10 @@
                 <b class="heart">♥</b> in Hoboken, België
             </p>
             <div class="footer-nav">
-                <a href="index.html">Starpagina</a>
-                <a href="bestel.html">Bestellen</a>
+                <a href="index.html">
+                    <i class="fa fa-home" aria-hidden="true"></i> Starpagina</a>
+                <a href="bestel.html">
+                    <i class="fa fa-shopping-basket" aria-hidden="true"></i> Bestellen</a>
             </div>
         </footer>
     </div>
