--- a/html/inleiding/cssgarden.html
+++ b/html/inleiding/cssgarden.html
@@ -11,7 +11,11 @@
 	<meta name="author" content="Dave Shea">
 	<meta name="description" content="A demonstration of what can be accomplished visually through CSS-based design.">
 	<meta name="robots" content="all">
-
+	<style>
+	.explanation > h3 { 
+		color: lightblue;
+	}
+	</style>
 
 	<!--[if lt IE 9]>
 	<script src="script/html5shiv.js"></script>
